# python-package-template

./: pyproject.toml  tox.ini
.github/workflows/: bandit.yml  black.yml  pull-request.yml  pylint.yml  pypi-publish.yml  pypi-test-publish.yml  pyright.yml  pytest.yml  wemake-python-styleguide.yml
src/ai_python_package/: __init__.py
tests/: test_methods.py
